// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Home/OnlineVotingPower matches snapshot 1`] = `
Array [
  <div
    className="makeStyles-root"
    id="box"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2"
    >
      onlineVotingPower
    </h2>
    <div
      className="makeStyles-data"
    >
      <h3
        className="MuiTypography-root primary__data MuiTypography-h3"
      >
        0.00%
      </h3>
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        0
         
        /
         
        0
      </p>
    </div>
    <div
      className="makeStyles-chart"
    >
      <div
        className="makeStyles-active"
      />
    </div>
    <div
      className="makeStyles-itemsContainer"
    >
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          block
        </h4>
        <a
          className="MuiTypography-root value MuiTypography-body1"
          href="/blocks/0"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          0
        </a>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          votingPowerPercent
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          0.00%
        </p>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          votingPower
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          0
        </p>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          totalVotingPower
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          0
        </p>
      </div>
    </div>
  </div>,
  ",",
]
`;

exports[`screen: Home/OnlineVotingPower matches snapshot 2`] = `
Array [
  <div
    className="makeStyles-root"
    id="box"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2"
    >
      onlineVotingPower
    </h2>
    <div
      className="makeStyles-data"
    >
      <h3
        className="MuiTypography-root primary__data MuiTypography-h3"
      >
        0.00%
      </h3>
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        0
         
        /
         
        254,579
      </p>
    </div>
    <div
      className="makeStyles-chart"
    >
      <div
        className="makeStyles-active"
      />
    </div>
    <div
      className="makeStyles-itemsContainer"
    >
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          block
        </h4>
        <a
          className="MuiTypography-root value MuiTypography-body1"
          href="/blocks/1143207"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          1,143,207
        </a>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          votingPowerPercent
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          0.00%
        </p>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          votingPower
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          0
        </p>
      </div>
      <div
        className="makeStyles-item"
      >
        <h4
          className="MuiTypography-root label MuiTypography-h4"
        >
          totalVotingPower
        </h4>
        <p
          className="MuiTypography-root value MuiTypography-body1"
        >
          254,579
        </p>
      </div>
    </div>
  </div>,
  ",",
]
`;
